--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,18 @@
 language: erlang
 sudo: false
 otp_release:
-# Test on all supported releases
-  - 20.2
-  - 20.1
-  - 20.0
-  - 19.3
-  - 19.2
-  - 19.1
-  - 19.0
-  - 18.3
-  - 18.2.1
-  - 18.1
-  - 18.0
-  - 17.5
+# Test on all supported releases & some more
+   - 21.1
+   - 21.0
+   - 20.3
+   - 19.3
+   - 18.3
+   - 17.5
 
-before_script:
-  - make rebar_src
 script:
   - make
-  - ./rebar3 eunit -v
+  - make test
   - make dialyze
+
 notifications:
   email: false
