--- a/rebar.config
+++ b/rebar.config
@@ -2,20 +2,20 @@
 % vim: ts=8 sw=8 ft=erlang
 
 {erl_opts, [
-            debug_info,
-            warn_unused_vars,
-            warn_unused_import,
-            warn_exported_vars,
-            {parse_transform, lager_transform},
-            {parse_transform, cut},
-            {parse_transform, do},
-            {parse_transform, import_as}
+    debug_info,
+    warn_unused_vars,
+    warn_unused_import,
+    warn_exported_vars,
+    {parse_transform, lager_transform},
+    {parse_transform, cut},
+    {parse_transform, do},
+    {parse_transform, import_as}
 ]}.
 
 {deps, [
-        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.6.1"}}},
-        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "b0b77dd9b9"}}},
-        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.3"}}},
+        {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.6.7"}}},
+        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, " 680688f"}}},
+        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.4"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
         % for Erlang 17 uncomment line below (using legacy branch of bson)
@@ -26,19 +26,17 @@
         % uncomment line below if you need Riak support and have Erlang < 18
         %{riakc,         {git, "https://github.com/ErlyORM/riak-erlang-client.git",        {tag, "1.3.0-boss"}}},
 
-        {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {ref, "2941b5f"}}},
-        {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {ref, "3.4.0"}}},
+        {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.7"}}},
+        {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {tag, "4.2.0"}}},
         {erlmc,         {git, "https://github.com/layerhq/erlmc.git",                     {ref, "c5280da"}}},
-        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.3"}}},
-        {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.1"}}},
-        {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.0"}}},
+        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.4"}}},
+        {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.2"}}},
+        {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.2"}}},
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
-                                                                                                % boss_branch for ets_cache
+                                                                                          % boss_branch for ets_cache
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
-        %{proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "6d7df1e"}}},
         {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
-        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.8.16"}}}
-        %{boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
+        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.9.0"}}}
   ]}.
 
 %% == Dialyzer ==
@@ -61,7 +59,7 @@
 {profiles,
     [{test, [
         {deps, [
-            {proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "6d7df1e"}}},
+            {proper,        {git, "https://github.com/manopapad/proper.git",                  {ref, "v1.3"}}},
             {boss_test,     {git, "https://github.com/ChicagoBoss/boss_test.git",             {tag, "0.0.1"}}}
         ]}
     ]},
