--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 
 {deps, [
         {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.6.7"}}},
-        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "680688f"}}},
+        {erlando,       {git, "https://github.com/mobilemindtect/erlando.git",               {ref, "680688f"}}},
         {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.4"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
