--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 
 {deps, [
         {lager,         {git, "https://github.com/erlang-lager/lager.git",                {tag, "3.6.7"}}},
-        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "680688f"}}},
+        {erlando,       {git, "https://github.com/mobilemindtec/erlando.git",               {branch, "master"}}},
         {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.4"}}},
         {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
 
@@ -30,7 +30,8 @@
         {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.7"}}},
         {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {tag, "4.2.0"}}},
         {erlmc,         {git, "https://github.com/ErlyORM/erlmc.git",                     {ref, "c5280da"}}},
-        {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.4"}}},
+        %{mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.4"}}},
+        {mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp",                     {tag, "1.7.0"}}},        
         {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.2"}}},
         {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.2"}}},
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
@@ -65,7 +66,7 @@
         ]}
     ]},
     {boss_test, [
-         {erl_opts, [{d, boss_test}]}
+         {erl_opts, [{tuple_calls, d, boss_test}]}
     ]},
     {prod, [
         %{erl_opts, [warnings_as_errors]}
