--- a/rebar.config
+++ b/rebar.config
@@ -13,23 +13,22 @@
 ]}.
 
 {deps, [
-        {erlando,       {git, "https://github.com/ChicagoBoss/erlando.git",               {ref, "680688f"}}},
-        {aleppo,        {git, "https://github.com/ErlyORM/aleppo.git",                    {tag, "v0.9.4"}}},
-        {medici,        {git, "https://github.com/ErlyORM/medici.git",                    {ref, "bb6167459d"}}},
+        {erlando,       {git, "https://github.com/burbas/erlando.git",                    {branch, "master"}}},
+        {aleppo,        {git, "https://github.com/burbas/aleppo.git",                     {tag, "v0.9.4"}}},
+        {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "master"}}},
+        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.9.0"}}}
+        {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.2"}}},
+        {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.2"}}},
 
-        %{mongodb,       {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
-
+        %% Database interfaces
+        {mongodb,       {git, "https://github.com/comtihon/mongodb-erlang",               {tag, "v0.7.9"}}},
         {ddb,           {git, "https://github.com/ErlyORM/ddb.git",                       {tag, "v0.1.7"}}},
         {epgsql,        {git, "https://github.com/epgsql/epgsql.git",                     {tag, "4.2.0"}}},
         {erlmc,         {git, "https://github.com/ErlyORM/erlmc.git",                     {ref, "c5280da"}}},
         {mysql,         {git, "https://github.com/ErlyORM/erlang-mysql-driver.git",       {tag, "v0.0.4"}}},
-        {poolboy,       {git, "https://github.com/devinus/poolboy.git",                   {tag, "1.5.2"}}},
-        {uuid,          {git, "https://github.com/avtobiff/erlang-uuid.git",              {tag, "v0.5.2"}}},
         {redo,          {git, "https://github.com/heroku/redo.git",                       {ref, "cd75a11"}}},
-                                                                                          % boss_branch for ets_cache
         {ets_cache,     {git, "https://github.com/cuongth/ets_cache.git",                 {ref, "c7a17204cd"}}},
-        {dh_date,       {git, "https://github.com/daleharvey/dh_date.git",                {ref, "23e5a61"}}},
-        {tiny_pq,       {git, "https://github.com/ChicagoBoss/tiny_pq.git",               {tag, "v0.9.0"}}}
+
   ]}.
 
 %% == Dialyzer ==
