--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
 
 {erl_opts, [
             debug_info,
+            warnings_as_errors,
             warn_unused_vars,
             warn_unused_import,
             warn_exported_vars,
