--- a/rebar.config
+++ b/rebar.config
@@ -4,10 +4,10 @@
 {erl_opts, [
             debug_info,
             tuple_calls,
-            %warnings_as_errors,
-            %warn_unused_vars,
-            %warn_unused_import,
-            %warn_exported_vars,
+            warnings_as_errors,
+            warn_unused_vars,
+            warn_unused_import,
+            warn_exported_vars,
             {parse_transform, cut},
             {parse_transform, do},
             {parse_transform, import_as}
